<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grayBackground"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".SignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:srcCompat="@drawable/whatsapplogo"
            android:contentDescription="@string/whatsapp_logo" />

        <EditText
            android:id="@+id/edtSignUpUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:autofillHints=""
            android:background="@color/white"
            android:ems="10"
            android:hint="@string/user_name"
            android:inputType="textPersonName"
            android:padding="13dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black" />

        <EditText
            android:id="@+id/edtSignUpEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:autofillHints="Email"
            android:background="@color/white"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="13dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black" />

        <EditText
            android:id="@+id/edtSignUpPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:background="@color/white"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="13dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black" />

        <TextView
            android:id="@+id/txtSignUpAlreadyHaveAcc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:padding="5dp"
            android:text="@string/already_have_account"
            android:textColor="@color/colorPrimary" />

        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="15dp"
            android:text="@string/sign_up"
            app:cornerRadius="5dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnSignUpGoogle"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:drawableLeft="@drawable/googlelogo"
                android:padding="13dp"
                android:text="@string/google"
                android:textAllCaps="false"
                android:textColor="@color/black"
                app:cornerRadius="5dp" />

            <Button
                android:id="@+id/btnSignUpFacebook"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="12dp"
                android:layout_weight="1"
                android:backgroundTint="#3D5997"
                android:drawableLeft="@drawable/facebook_svgrepo_com"
                android:padding="13dp"
                android:text="@string/facebook"
                android:textAllCaps="false"
                android:textColor="@color/white"
                app:cornerRadius="5dp" />
        </LinearLayout>

        <TextView
            android:id="@+id/txtSignUpWithPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/sign_up_with_phone"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp" />

    </LinearLayout>
</LinearLayout>