<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grayBackground"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".SignInActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:gravity="center"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/whatsapplogo"
            android:contentDescription="@string/signin_whatsapp_logo" />

        <EditText
            android:id="@+id/edtSignInEmail_Phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:autofillHints=""
            android:background="@color/white"
            android:ems="10"
            android:hint="@string/SignIn_Email"
            android:inputType="textPersonName"
            android:padding="13dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            tools:ignore="TextFields" />

        <EditText
            android:id="@+id/edtSignInPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="Password"
            android:background="@color/white"
            android:ems="10"
            android:hint="@string/SingInpassword"
            android:inputType="textPassword"
            android:padding="13dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black" />

        <TextView
            android:id="@+id/txtSignInClickForSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="5sp"
            android:padding="5dp"
            android:text="@string/click_for_sign_up"
            android:textColor="@color/colorPrimary" />

        <Button
            android:id="@+id/btnSignIn"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="12dp"
            android:text="@string/sign_in"
            app:cornerRadius="5dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnSignInGoogle"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="4dp"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:drawableLeft="@drawable/googlelogo"
                android:padding="12dp"
                android:text="@string/SignIngoogle"
                android:textAllCaps="false"
                android:textColor="@color/black"
                app:cornerRadius="5dp" />

            <Button
                android:id="@+id/btnSignInFacebook"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="12dp"
                android:layout_weight="1"
                android:backgroundTint="#3C5897"
                android:drawableLeft="@drawable/facebook_svgrepo_com"
                android:padding="12dp"
                android:text="@string/SignInfacebook"
                android:textAllCaps="false"
                android:textColor="@color/white"
                app:cornerRadius="5dp" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>